# mini-claude

./: .env  05_skills.py  11_errors.py  compact.py  main.py  memory.py  permission.py  pyproject.toml  settings.py  skills.py  tools.py
EthanAgent/: .env  .gitignore  README.md  agent_runner.py  bootstrap.py  config.json  gateway.py
EthanAgent/.memory/: MEMORY.md  SOUL.md  USER.md
EthanAgent/agent/: compact.py  context.py  mcp.py  memory.py  skills.py
EthanAgent/api/: app.py  schema.py
EthanAgent/bus/: __init__.py  events.py  queue.py
EthanAgent/channels/: __init__.py  base.py  manager.py  web.py
EthanAgent/commands/: commands.py  router.py
EthanAgent/config/: __init__.py  loader.py  schema.py
EthanAgent/cron/: jobs.json  service.py  types.py
EthanAgent/docs/: api.md  features.md
EthanAgent/frontend/: index.html  package-lock.json
EthanAgent/frontend/src/: App.css  App.tsx  index.css
EthanAgent/legal-intern-site/css/: style.css
EthanAgent/memory/: MEMORY.md
EthanAgent/providers/: base.py
EthanAgent/session/: manager.py
EthanAgent/sessions/: cli_direct.jsonl
EthanAgent/templates/: identity.md  skills_section.md
EthanAgent/tools/: base.py  cron.py  file.py  shell.py  test.py  tool_registry.py  web_fetch.py
EthanAgent/utils/: runtime.py  templates.py
EthanAgent/web/: .env.example  index.html  package-lock.json  package.json
tutorials/: 14_cron.py  backgroud.py  compact.py  cron.py  errors.py  settings.py  tasks.py  todo.py  tools.py
tutorials/.claude/: scheduled_tasks.json
tutorials/.runtime-tasks/: 8006dbd4.json  fe4cdc20.json
(+18 files in other folders)
