[project]
name = "mini-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
]

[tool.uv.workspace]
members = [
    "mini-claude",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
