[project]
name = "mini-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "dotenv>=0.9.9",
    "filelock>=3.13.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pymilvus>=2.4.0",
    "pyyaml>=6.0",
    "readability-lxml>=0.8.1",
    "tiktoken>=0.12.0,<1.0.0",
    "fastapi[standard]>=0.136.1",
]

[tool.uv.workspace]
members = [
    "mini-claude",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
